Fixed some layout bugs

--- a/fixtures/test_line_wrapping_box.css
+++ b/fixtures/test_line_wrapping_box.css
@@ -8,6 +8,7 @@ div {
 
 .parent {
   width: 300px;
+  background-color: black;
 }
 
 #random {
